<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.login.LoginActivity"
            android:padding="20dp">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="510dp"
                app:srcCompat="@drawable/ic_lynxchatlogo"
                android:id="@+id/imageView"
                tools:srcCompat="@drawable/ic_lynxchatlogo"
                android:layout_weight="1" />
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1" android:layout_marginTop="20dp">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/usernameEditText" android:hint="@string/username" style="@style/LightGreyInput"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordEditText" android:hint="@string/password" style="@style/LightGreyInput"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/domainEditText" android:hint="@string/domain" style="@style/LightGreyInput"/>
            <Button
                    android:text="@string/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/loginButton"/>
        </LinearLayout>
    </LinearLayout>
</layout>
