<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintWidth_max="wrap">


    <androidx.cardview.widget.CardView
            android:id="@+id/card_chat_message_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            style="@style/ChatMessageCard"
            android:minWidth="@dimen/ChatMessageCardMinWidth">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_end_color"
                android:layout_gravity="start">

            <TextView
                    android:id="@+id/text_chat_other_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/username"
                    android:background="@color/cardview_shadow_end_color"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/text_chat_message_other"
                    android:layout_width="match_parent"
                    android:text="@string/message"
                    style="@style/ChatMessage"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_shadow_end_color" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/text_chat_message_time_other"
            android:layout_width="wrap_content"
            style="@style/ChatMessageTime"
            android:text="@string/stub_message_time"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/card_chat_message_other"
            app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>