<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".ui.activity.chat.ChatFragment">
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/messageListRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/messageInputView"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                tools:listitem="@layout/list_item_message_owner"/>

        <LinearLayout
                android:id="@+id/messageInputView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/messageListRecyclerView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:maxHeight="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_attach_file_black_24dp"
                    android:id="@+id/attachFileButton"
                    app:tint="@color/darkPrimary"
                    android:background="#00FFFFFF"
                    android:minWidth="48dp"
                    android:contentDescription="@string/attachFile" />

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    style="@style/LightGreyInput"
                    android:inputType="textMultiLine"
                    android:hint="@string/message"
                    android:importantForAutofill="no"
                    android:id="@+id/messageEditor" />

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_send_black_24dp"
                    android:id="@+id/sendMessageButton"
                    android:background="#00FFFFFF"
                    app:tint="@color/darkPrimary"
                    android:minWidth="48dp"
                    android:contentDescription="@string/sendMessage" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
